# benchmark-ram-by-lang

./: .gitignore  README.md  generate-table.sh  measure.sh  run-benchmarks.sh
bun/: server.ts
go/: go.mod  server.go
java/: Server.java
node/: server.js
php/: server.php
rust/: Cargo.toml
rust/src/: main.rs
zig/: server.zig
