[package]
name = "rust-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z" # Optimize for size
strip = true    # Strip symbols

